--- a/dj3/school/templates/school/home.html
+++ b/dj3/school/templates/school/home.html
@@ -7,6 +7,7 @@
         <link href="css/style.css" rel="stylesheet">
     </head>
     <body>
-    hi there
-    </body>
+    hi there{{name}}
+ is this and roll no is {{rollno}}  
+{{course}}  </body>
 </html>
